crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__parameter_vs_local_scoping_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: parameter_vs_local_scoping.cm
============================================================
Source code:
func test(param: felt) {
    let outer = param; // OK: param is visible
    {
        let inner = outer; // OK: outer is visible
        let param = 42; // OK: shadowing parameter (might warn in future)
    }
    let result = inner; // Should error: Undeclared variable 'inner' (outer is not visible)
    return result;
}

============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ <unknown>:7:18 ]
   │
 7 │     let result = inner; // Should error: Undeclared variable 'inner' (outer is not visible)
   │                  ──┬──  
   │                    ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'inner'
   ╭─[ <unknown>:4:13 ]
   │
 4 │         let inner = outer; // OK: outer is visible
   │             ──┬──  
   │               ╰──── Unused variable 'inner'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'param'
   ╭─[ <unknown>:5:13 ]
   │
 5 │         let param = 42; // OK: shadowing parameter (might warn in future)
   │             ──┬──  
   │               ╰──── Unused variable 'param'
───╯
